--- a/package.json
+++ b/package.json
@@ -8,16 +8,26 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
+    "lint": "eslint . --ext .ts",
     "cdk": "cdk"
   },
   "devDependencies": {
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.6",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
+    "aws-cdk": "2.68.0",
+    "eslint": "^8.36.0",
+    "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint-config-xo": "^0.43.1",
+    "eslint-config-xo-typescript": "^0.56.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.5.0",
     "ts-jest": "^29.0.5",
-    "aws-cdk": "2.68.0",
     "ts-node": "^10.9.1",
-    "typescript": "~4.9.5"
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "aws-cdk-lib": "2.68.0",
