--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.3",
+    "@types/js-yaml": "^4.0.8",
     "@types/node": "^18.17.2",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
@@ -32,6 +33,7 @@
   "dependencies": {
     "aws-cdk-lib": "^2.90.0",
     "constructs": "^10.2.69",
+    "js-yaml": "^4.1.0",
     "source-map-support": "^0.5.21"
   }
 }
