--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,3 @@
-root = true
-
 [*]
 end_of_line = lf
 insert_final_newline = true
@@ -12,3 +10,6 @@ tab_width = 8
 [*.{ts,js}]
 indent_style = space
 indent_size = 2
+
+[Makefile]
+indent_style = tab
